Bug 1331949 Make service worker and cache diagnostic assert code compile on beta. r=asuth a=jcristau

--HG--
extra : source : 3174a6f74014765fff61ca3b9e2b39e343a45fd1