dom/workers/test/gtest/TestReadWrite.cpp
@@ -24,9 +24,14 @@ class ServiceWorkerRegistrarTest : public ServiceWorkerRegistrar
 public:
   ServiceWorkerRegistrarTest()
   {
+#if defined(DEBUG) || !defined(RELEASE_OR_BETA)
     nsresult rv = NS_GetSpecialDirectory(NS_APP_USER_PROFILE_50_DIR,
                                        getter_AddRefs(mProfileDir));
     MOZ_DIAGNOSTIC_ASSERT(NS_SUCCEEDED(rv));
+#else
+    NS_GetSpecialDirectory(NS_APP_USER_PROFILE_50_DIR,
+                           getter_AddRefs(mProfileDir));
+#endif
     MOZ_DIAGNOSTIC_ASSERT(mProfileDir);
   }
 
